--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.employmeo</groupId>
-	<artifactId>adminserver</artifactId>
-	<name>portal</name>
-	<description>Employmeo Core Program Components</description>
-	<version>1.1-SNAPSHOT</version>
+	<artifactId>integration</artifactId>
+	<name>Integration</name>
+	<description>Employmeo Integration Application</description>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -28,7 +28,7 @@
 		<dbdeploy.db-driver>org.postgresql.Driver</dbdeploy.db-driver>
 		<dbdeploy.dbms>pgsql</dbdeploy.dbms>
 		<commons-math-version>3.6.1</commons-math-version>	
-		<persistence-unit.version>0.0.6-SNAPSHOT</persistence-unit.version>
+		<persistence-unit.version>0.0.8-SNAPSHOT</persistence-unit.version>
 		<swagger.version>1.5.9</swagger.version>
 	</properties>
 
@@ -157,8 +157,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -209,35 +209,6 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<!-- Database change management and versioning plugin -->
-				<!-- http://dbdeploy.com/documentation/getting-started/rules-for-using-dbdeploy/ -->
-				<!-- Usage -->
-				<!-- Generate DB scripts: mvn clean install dbdeploy:db-scripts -->
-				<!-- Apply DB deltas: mvn clean install dbdeploy:update -->
-				<groupId>com.dbdeploy</groupId>
-				<artifactId>maven-dbdeploy-plugin</artifactId>
-				<version>${dbdeploy.version}</version>
-				<configuration>
-					<scriptdirectory>${basedir}/src/main/sql</scriptdirectory>
-					<driver>${dbdeploy.db-driver}</driver>
-					<url>${DB_URL}</url>
-					<userid>${DB_USERNAME}</userid>
-					<password>${DB_PASSWORD}</password>
-					<dbms>${dbdeploy.dbms}</dbms>
-					<delimiter>;</delimiter>
-					<delimiterType>row</delimiterType>
-					<outputfile>${basedir}/target/dbdeploy-apply.out</outputfile>
-					<undoOutputfile>${basedir}/target/dbdeploy-undo.out</undoOutputfile>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.postgresql</groupId>
-						<artifactId>postgresql</artifactId>
-						<version>${postgres-version}</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
