--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,9 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<json-version>20151123</json-version>
-		<tomcat-version>8.5.3</tomcat-version>
-		<jersey-version>2.23.1</jersey-version>
-		<postgres-version>9.4.1208</postgres-version>
-		<dbdeploy.version>3.0M3</dbdeploy.version>
-		<dbdeploy.db-driver>org.postgresql.Driver</dbdeploy.db-driver>
-		<dbdeploy.dbms>pgsql</dbdeploy.dbms>
+		<jersey-jackson.version>2.24.1</jersey-jackson.version>
 		<commons-math-version>3.6.1</commons-math-version>
-		<persistence-unit.version>0.0.8-SNAPSHOT</persistence-unit.version>
+		<persistence-unit.version>0.0.9-SNAPSHOT</persistence-unit.version>
 		<sendgrid.version>3.1.0</sendgrid.version>
 		<swagger.version>1.5.9</swagger.version>
 	</properties>
@@ -84,23 +79,13 @@
 			<artifactId>postgresql</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>org.eclipse.persistence.jpa</artifactId>
-			<version>2.6.2</version>
-		</dependency>
-		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.connectors</groupId>
 			<artifactId>jersey-apache-connector</artifactId>
-			<version>${jersey-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.im4java</groupId>
-			<artifactId>im4java</artifactId>
-			<version>1.4.0</version>
+			<version>${jersey-jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
