--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<commons-math-version>3.6.1</commons-math-version>
 		<persistence-unit.version>0.0.28-SNAPSHOT</persistence-unit.version>
 		<sendgrid.version>3.1.0</sendgrid.version>
+		<bigml.version>1.4.2</bigml.version>
 		<swagger.version>1.5.9</swagger.version>
 		<metrics.version>3.1.3</metrics.version>
 	</properties>
@@ -114,7 +115,11 @@
 			<artifactId>sendgrid-java</artifactId>
 			<version>${sendgrid.version}</version>
 		</dependency>
-
+		<dependency>
+		    <groupId>org.bigml</groupId>
+		    <artifactId>bigml-binding</artifactId>
+		    <version>${bigml.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
