--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>integration</artifactId>
 	<name>Integration</name>
 	<description>Talytica Integration Application</description>
-	<version>0.0.13</version>
+	<version>0.0.14-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -23,7 +23,7 @@
 		<json-version>20151123</json-version>
 		<jersey-jackson.version>2.24.1</jersey-jackson.version>
 		<commons-math-version>3.6.1</commons-math-version>
-		<persistence-unit.version>0.0.28</persistence-unit.version>
+		<persistence-unit.version>0.0.29-SNAPSHOT</persistence-unit.version>
 		<sendgrid.version>3.1.0</sendgrid.version>
 		<bigml.version>1.4.2</bigml.version>
 		<swagger.version>1.5.9</swagger.version>
