--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>integration</artifactId>
 	<name>Integration</name>
 	<description>Talytica Integration Application</description>
-	<version>0.0.16</version>
+	<version>0.0.17-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -20,12 +20,12 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<persistence-unit.version>0.0.31</persistence-unit.version>
+		<persistence-unit.version>0.0.32</persistence-unit.version>
 		<guava.version>21.0</guava.version>
 		<swagger.version>1.5.12</swagger.version>
 		<metrics.version>3.1.3</metrics.version>
 		<commons-math-version>3.6.1</commons-math-version>
-		<jersey-jackson.version>2.25</jersey-jackson.version>
+		<jersey-jackson.version>2.25.1</jersey-jackson.version>
 		<sendgrid.version>3.1.0</sendgrid.version>
 		<bigml.version>1.4.2</bigml.version>
 	</properties>
