--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.1.RELEASE</version>
+		<version>1.4.6.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
@@ -20,13 +20,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<persistence-unit.version>0.0.32</persistence-unit.version>
+		<persistence-unit.version>0.0.33-SNAPSHOT</persistence-unit.version>
 		<guava.version>21.0</guava.version>
 		<swagger.version>1.5.12</swagger.version>
 		<metrics.version>3.1.3</metrics.version>
+		<sendgrid.version>3.1.0</sendgrid.version>	
 		<commons-math-version>3.6.1</commons-math-version>
 		<jersey-jackson.version>2.25.1</jersey-jackson.version>
-		<sendgrid.version>3.1.0</sendgrid.version>
 		<bigml.version>1.4.2</bigml.version>
 	</properties>
 
