--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
 		<commons-math-version>3.6.1</commons-math-version>
 		<jersey-jackson.version>2.25.1</jersey-jackson.version>
 		<bigml.version>1.4.2</bigml.version>
+		<spring-cloud-version>1.2.0.RELEASE</spring-cloud-version>
+		<fileupload-version>1.3.1</fileupload-version>
 	</properties>
 
 	<dependencies>
@@ -113,6 +115,21 @@
 			<artifactId>commons-math3</artifactId>
 			<version>${commons-math-version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+			<version>${fileupload-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-aws-context</artifactId>
+			<version>${spring-cloud-version}</version>
+		</dependency>
+	    <dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-aws-autoconfigure</artifactId>
+		    <version>${spring-cloud-version}</version>
+	    </dependency>
 		<!-- sendgrid email service -->
 		<dependency>
 			<groupId>com.sendgrid</groupId>
