--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,11 @@
 	<packaging>jar</packaging>
 
 	<properties>
+		<persistence-unit.version>0.0.34</persistence-unit.version>
 		<start-class>com.talytica.integration.IntegrationApplication</start-class>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<persistence-unit.version>0.0.34-SNAPSHOT</persistence-unit.version>
 		<guava.version>21.0</guava.version>
 		<swagger.version>1.5.12</swagger.version>
 		<metrics.version>3.1.3</metrics.version>
