--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<persistence-unit.version>0.1.3</persistence-unit.version>
+		<persistence-unit.version>0.1.4-SNAPSHOT</persistence-unit.version>
 		<start-class>com.talytica.integration.IntegrationApplication</start-class>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
