--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.6.RELEASE</version>
+		<version>2.0.1.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
@@ -12,11 +12,11 @@
 	<artifactId>integration</artifactId>
 	<name>Integration</name>
 	<description>Talytica Integration Application</description>
-	<version>0.0.38</version>
+	<version>0.0.39-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
-		<persistence-unit.version>0.1.15</persistence-unit.version>
+		<persistence-unit.version>0.1.17-SNAPSHOT</persistence-unit.version>
 		<start-class>com.talytica.integration.IntegrationApplication</start-class>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -29,6 +29,7 @@
 		<jersey-jackson.version>2.25.1</jersey-jackson.version>
 		<bigml.version>1.4.2</bigml.version>
 		<spring-cloud-version>1.2.0.RELEASE</spring-cloud-version>
+		<org-json.version>20180130</org-json.version>
 		<fileupload-version>1.3.1</fileupload-version>
 		<logentries-version>1.1.37</logentries-version>
 	</properties>
@@ -91,6 +92,7 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
+			<version>${org-json.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.connectors</groupId>
@@ -100,7 +102,6 @@
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-multipart</artifactId>
-			<version>${jersey-jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
@@ -140,8 +141,7 @@
 		<dependency>
 			<groupId>com.sendgrid</groupId>
 			<artifactId>sendgrid-java</artifactId>
-			<version>${sendgrid.version}</version>
-		</dependency>
+			</dependency>
 		<!-- bigml prediction model service -->
 		<dependency>
 		    <groupId>org.bigml</groupId>
