--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,7 @@
 		<dependency>
 			<groupId>com.sendgrid</groupId>
 			<artifactId>sendgrid-java</artifactId>
+			<version>${sendgrid.version}</version>
 			</dependency>
 		<!-- bigml prediction model service -->
 		<dependency>
