--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
     commands:
       - apt-get update -y
       - apt-get install -y maven
+      - wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
       - apt-get install -y awscli
   build:
     commands:
